# Hyper-Gen

./: Cargo.toml  LICENSE  README.md  build.rs
.devcontainer/: Dockerfile
src/: bench.rs  cuda_kernel.cu  cuda_kernel.h  dist.rs  fastx_reader.rs  hd.rs  lib.rs  main.rs  params.rs  sketch.rs  sketch_cuda.rs  types.rs  utils.rs
test/: test.fna  test.rs
