[package]
name = "hyper-gen-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = ["test_files/*"]

[dependencies]
clap = { version = "4.4.6", features = ["cargo"] }
serde = { version = "1.0.193", features = ["derive"] }

bincode = "1.3.3"
rayon = "1.8.0"
glob = "0.3.1"
rand = "0.8.5"
log = "0.4.20"
indexmap = "2.0.2"

rust-seq2kminmers = "0.1.0"
bio-seq = "0.10.0"

needletail = "0.5.1"

bloom = "0.3.2"
ahash = "0.8.3"
wyhash = "0.5.0"
t1ha = "0.1.0"
fxhash = "0.2.1"

bitpacking = "0.9.2"
ndarray = "0.15.6"
indicatif = "0.17.7"

rand_xoshiro = "0.6.0"

[[bin]]
name = "hyper-gen-rust"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
panic = "abort"
lto = true
